--- a/views/index.pug
+++ b/views/index.pug
@@ -3,13 +3,15 @@ extends layout
 block content
   h1= title
   p My name is Neelima 
-  button(type="button",class="btn btn-primary", onclick="doBump()") Press Me
-  div(id="bump") Bump the Count
+  button(type="button",class="btn btn-success", onclick="doReduce()") Press Me
+  div(id="reduce") Reduce the value 
   script.
-   let count=0
-   let bump=1
-   function doBump(){
-    count=count+bump;
-    bump=bump+1;
-    document.getElementById('bump').innerHTML=`Count ${count} with Bump ${bump}`        
+   let count=20
+   let change=-1
+   function doReduce(){
+    count+=change;
+    change-=1;
+    document.getElementById('reduce').innerHTML=`Count ${count} with change ${change}`
+    console.log(count
+    )
    }
